--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "java.project.sourcePaths": [
+        "1.Learn the basic/Lecture 5(Basic Recursion)",
         "1.Learn the basic/Lecture 4",
         "1.Learn the basic/Lecture 2",
-        "1.Learn the basic/Lecture 5(Basic Recursion)"
+        "1.Learn the basic/Lecture 6(Hashing)"
     ]
 }
